--- a/files/edit_styles.css
+++ b/files/edit_styles.css
@@ -24,7 +24,7 @@
 	border: none;
 	border-radius: 15px;
 	cursor: pointer;
-	display: inline-block;
+	margin-top: -20px;
 }
 .dropButton:hover, .dropButton:focus {
 	background-color: lime;
@@ -40,6 +40,7 @@
 	border-top-right-radius: 15px;
 	border-top-left-radius: 15px;
 	cursor: pointer;
+	margin-top: -20px;
 }
 .noteDropdown{
 	position: relative;
@@ -96,4 +97,5 @@
 	width: 5%;
 	cursor: pointer;
 	display: inline-block;
+	margin-top: -60px;
 }
